create authentication service

--- a/authentication-service/src/main/resources/bootstrap.yml
+++ b/authentication-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: company-service
+    name: authentication-service
   cloud:
     consul:
       host: localhost
@@ -9,5 +9,5 @@ spring:
         enabled: true
         profileSeparator: ','
       discovery:
-        instance-id: company
-        serviceName: company-service
+        instance-id: authentication
+        serviceName: authentication-service
