hrs-1: add frontend component

--- a/gateway/src/main/resources/application-local.yml
+++ b/gateway/src/main/resources/application-local.yml
@@ -1,2 +1,23 @@
 server:
   port: 8080
+
+  spring:
+    cloud:
+      gateway:
+        globalcors:
+          corsConfigurations:
+            '[/**]':
+              allowedHeaders:
+              - x-requested-with
+              - authorization
+              - Content-Type
+              - Authorization
+              - credential
+              - X-XSRF-TOKEN
+              - token
+              - username
+              - client
+              allowedOrigins:
+              - "http://localhost:3000"
+              allowedMethods:
+              - GET
