add database support

--- a/company-service/pom.xml
+++ b/company-service/pom.xml
@@ -52,7 +52,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -75,5 +82,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
