--- a/company-service/src/main/resources/application-local.yml
+++ b/company-service/src/main/resources/application-local.yml
@@ -1,2 +1,8 @@
 server:
   port: 8081
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/shamuhrs
+    username: shamuhrs
+    password: shamuhrs
