--- a/company-service/src/main/resources/application.yml
+++ b/company-service/src/main/resources/application.yml
@@ -2,3 +2,12 @@ server:
   servlet:
     session:
       timeout: 30d
+
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: none
+    generate-ddl: false
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/changelog/db.changelog-master.yml
