--- a/web/package.json
+++ b/web/package.json
@@ -6,26 +6,32 @@
   "author": "eastbay",
   "license": "MIT",
   "scripts": {
+    "eslint": "eslint ./javascript --ext js,jsx",
+    "stylelint": "stylelint --color -s scss \"./javascript/**/*.scss\";",
     "webpack": "yarn install;webpack-dev-server --config ./config/webpack.config.js --watch --color",
     "build": "yarn install;webpack --config ./config/webpack.config.js --color"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
-    "eslint": "^5.14.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "html-loader": "^0.5.5",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
+    "stylelint-config-airbnb": "^0.0.0",
+    "stylelint-order": "^2.0.0",
+    "stylelint-scss": "^3.5.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
@@ -37,8 +43,13 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
+    "redux-thunk": "^2.3.0",
     "rest": "^2.0.0"
   }
 }
