--- a/web/.eslintrc.yml
+++ b/web/.eslintrc.yml
@@ -14,3 +14,8 @@ parserOptions:
 plugins:
   - react
 rules: {}
+
+settings:
+  import/resolver:
+    webpack:
+      config: ./config/webpack.config.js
