--- a/web/package.json
+++ b/web/package.json
@@ -20,12 +20,17 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-harddisk-plugin": "^1.0.1",
+    "husky": "^1.3.1",
+    "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
@@ -39,14 +44,19 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bloomer": "^0.6.5",
+    "bulma": "^0.7.4",
     "consul": "^0.34.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-thunk": "^2.3.0",
