--- a/web/.eslintrc.yml
+++ b/web/.eslintrc.yml
@@ -2,6 +2,7 @@ env:
   browser: true
   es6: true
 extends: airbnb
+parser: 'babel-eslint'
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
