--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
@@ -46,6 +48,7 @@
     "babel-polyfill": "^6.26.0",
     "bloomer": "^0.6.5",
     "bulma": "^0.7.4",
+    "connected-react-router": "^6.3.1",
     "consul": "^0.34.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
