--- a/web/.babelrc
+++ b/web/.babelrc
@@ -3,5 +3,14 @@
     "@babel/env",
     "@babel/react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    ["module-resolver", {
+      "root": ["./javascript"],
+      "alias": {
+        "Image": "./javascript/App/Image",
+        "Style": "./javascript/App/Style"
+      }
+    }]
+  ]
 }
