--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bloomer": "^0.6.5",
     "bulma": "^0.7.4",
@@ -64,7 +65,6 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
-    "redux-thunk": "^2.3.0",
-    "rest": "^2.0.0"
+    "redux-thunk": "^2.3.0"
   }
 }
