--- a/src/main/resources/db/changelog/db.ddl-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.ddl-0.0.1.yml
@@ -13,7 +13,7 @@ databaseChangeLog:
               primaryKey: true
         - column:
             name: employee_number
-            type: int
+            type: varchar(255)
         - column:
             name: email_work
             type: varchar(255)
