--- a/src/main/resources/db/changelog/db.dml-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.dml-0.0.1.yml
@@ -29,3 +29,33 @@ databaseChangeLog:
            name: name
            value: PENDING_VERIFICATION
         tableName: user_statuses
+- changeSet:
+    id: 1550646329777-4
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: ADMIN
+        tableName: user_roles
+- changeSet:
+    id: 1550646329777-5
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: MANAGER
+        tableName: user_roles
+- changeSet:
+    id: 1550646329777-6
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: NON_MANAGER
+        tableName: user_roles
