--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1015,3 +1015,63 @@ databaseChangeLog:
             name: user_id
             type: BIGINT
         tableName: benefit_plans_users
+- changeSet:
+    id: 1550646329776-39
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: ACTIVE
+        tableName: user_statuses
+- changeSet:
+    id: 1550646329776-40
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: DISABLED
+        tableName: user_statuses
+- changeSet:
+    id: 1550646329776-41
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: PENDING_VERIFICATION
+        tableName: user_statuses
+- changeSet:
+    id: 1550646329776-42
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: ADMIN
+        tableName: user_roles
+- changeSet:
+    id: 1550646329776-43
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: MANAGER
+        tableName: user_roles
+- changeSet:
+    id: 1550646329776-44
+    author: Max-Zhao
+    changes:
+    - insert:
+        columns:
+        - column:
+           name: name
+           value: NON_MANAGER
+        tableName: user_roles
