--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -1,8 +1,6 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/db.ddl-0.0.1.yml
-  - include:
-      file: db/changelog/db.dml-0.0.1.yml
+      file: db/changelog/db.changelog-0.0.1.yml
   # includeAll have bugs in 3.6.1, needs to upgrade to later versions to enable it to work
   # https://github.com/liquibase/liquibase/pull/698
   # https://github.com/spring-projects/spring-boot/issues/11615
