--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,20 @@
 server:
   port: 8081
 
+logging:
+  level:
+    root: INFO
+
 spring:
   datasource:
     url: jdbc:mysql://hrs.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company
     username: shamuhrs
     password: 4eD852HheH9DLykD
+  thymeleaf:
+    cache: false
+
+application:
+  address: http://localhost:8081
+
+sendGrid:
+  apiKey: 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
