--- a/config/application-qa.yml
+++ b/config/application-qa.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://hrs-cluster.cluster-cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com:3306/shamuhrs
+    url: jdbc:mysql://hrs.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company
     username: shamuhrs
-    password: shamuhrs
+    password: 4eD852HheH9DLykD
 
   cloud:
     consul:
