jira/SH-41: fix database load failed

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yml
+  cloud:
+    consul:
+      discovery:
+        health-check-url: ${server.address}
