--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: company-service
   cloud:
+    consul:
+      host: localhost
+      port: 8500
       config:
         enabled: true
         profileSeparator: ','
