--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,6 +10,9 @@ spring:
     url: jdbc:mysql://hrs.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company
     username: shamuhrs
     password: 4eD852HheH9DLykD
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 2
   thymeleaf:
     cache: false
 
