--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,21 @@
 server:
   port: 8081
 
+logging:
+  level:
+    root: DEBUG
+
 spring:
   datasource:
     url: jdbc:mysql://hrs.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company
     username: shamuhrs
     password: 4eD852HheH9DLykD
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 2
+
+#spring:
+#  datasource:
+#    url: jdbc:mysql://10.0.0.142:3306/company?useUnicode=true&characterEncoding=utf-8&useSSL=true
+#    username: shamuhrs
+#    password: shamuhrs
