--- a/config/application-qa.yml
+++ b/config/application-qa.yml
@@ -6,4 +6,12 @@ spring:
     url: jdbc:mysql://hrs.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company
     username: shamuhrs
     password: 4eD852HheH9DLykD
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 2
+  thymeleaf:
+    cache: false
 
+application:
+  systemEmailAddress: noreply@interviewed.com
+  frontEndAddress: http://human-resource-system-qa.s3-website-ap-northeast-1.amazonaws.com/
