--- a/config/application-qa.yml
+++ b/config/application-qa.yml
@@ -14,4 +14,4 @@ spring:
 
 application:
   systemEmailAddress: noreply@interviewed.com
-  frontEndAddress: http://human-resource-system-qa.s3-website-ap-northeast-1.amazonaws.com/
+  frontEndAddress: http://shamu-hrs-qa.s3-website-ap-northeast-1.amazonaws.com/
