--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1545,21 +1545,25 @@ databaseChangeLog:
     id: 1550646329776-49
     author: Max-Zhao
     changes:
-    - addColumn:
-        columns:
-        - column:
-            name: street_1
-            type: varchar(255)
-        - column:
-            name: street_2
-            type: varchar(255)
-        - column:
-            name: city_id
-            type: BIGINT
-        - column:
-            name: country_id
-            type: BIGINT
-        - column:
-            name: postal_code
-            type: varchar(32)
-        tableName: user_personal_information
+    - modifyDataType:
+        columnName: is_primary
+        newDataType: boolean
+        tableName: user_emergency_contacts
+- changeSet:
+    id: 1550646329776-50
+    author: Max-Zhao
+    changes:
+    - modifyDataType:
+        columnName: is_limited
+        newDataType: boolean
+        tableName: time_off_policies
+- changeSet:
+    id: 1550646329776-51
+    author: Max-Zhao
+    changes:
+    - modifyDataType:
+        columnName: is_first_accrual_prorated
+        newDataType: boolean
+        columnName: does_carryover_at_start_of_year
+        newDataType: boolean
+        tableName: time_off_policy_accrual_options
