--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1567,3 +1567,11 @@ databaseChangeLog:
         columnName: does_carryover_at_start_of_year
         newDataType: boolean
         tableName: time_off_policy_accrual_options
+- changeSet:
+    id: 1550646329776-52
+    author: Max-Zhao
+    changes:
+    - modifyDataType:
+        columnName: is_first_accrual_prorated
+        newDataType: boolean
+        tableName: time_off_policy_accrual_options
