--- a/config/application-env.yml
+++ b/config/application-env.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://shamu-hrs-qa.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/shamu_hrs_qa
+    url: jdbc:mysql://shamu-hrs-qa.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/shamu_hrs_qa?zeroDateTimeBehavior=convertToNull
     username: shamu_hrs_qa
     password: shamu_hrs_qa
     hikari:
