--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -7,7 +7,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://hrs.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company?zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://shamu-hrs-dev.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/company?zeroDateTimeBehavior=convertToNull
     username: shamuhrs
     password: 4eD852HheH9DLykD
     hikari:
