Change liquibase dataType. (#36)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1675,7 +1675,7 @@ databaseChangeLog:
             type: NUMERIC
         - column:
             name: name
-            type: varchar(255)
+            type: STRING
         file: db/changelog/files/data_states.csv
         primaryKey: id
         tableName: states
