--- a/config/application-env.yml
+++ b/config/application-env.yml
@@ -15,3 +15,10 @@ spring:
 application:
   systemEmailAddress: noreply@interviewed.com
   frontEndAddress: http://shamu-hrs-qa.s3-website-ap-northeast-1.amazonaws.com/
+
+aws:
+  awsAccessKeyId: AKIAXYMULKOL2JOY2GOP
+  awsSecretAccessKey: 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
+  bucketName: shamu-hrs-qa
+  folder: media
+  region: ap-northeast-1
