jira/SH-86:optimize code

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -24,5 +24,5 @@ aws:
   awsAccessKeyId: AKIAXYMULKOL2JOY2GOP
   awsSecretAccessKey: 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
   bucketName: shamu-hrs-qa
-  folder: media
+  folder: media-local
   region: ap-northeast-1
