--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -26,3 +26,11 @@ aws:
   bucketName: shamu-hrs-qa
   folder: media-local
   region: ap-northeast-1
+
+auth0:
+  jwks: https://eastbay.auth0.com/.well-known/jwks.json
+  algorithm: RS256
+  authDomain: https://eastbay.auth0.com/
+
+sendGrid:
+  apiKey: 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
