Jira/sh 26 My Info Job Information  (#38)
* job add new

* modify my info job SH 38

* modify bug SH-38

* modify bug SH-38

* commit files SH-26

* commit files SH-26

* commit files SH-26

* commit files SH-26

* modify review SH-26

* modify review SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* modify code style SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* modify bug SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* Refactoring directory SH-26

* modify bug SH-26

* modify SH-26

* modify SH-26

* Update .gitignore

* modify SH-26

* modify SH-26

* modify SH-26

* modify

* modify SH-26

* resolve the conflicts

* resolve the conflicts

* resolve the conflicts

* resolve the conflicts

--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1679,3 +1679,13 @@ databaseChangeLog:
         file: db/changelog/files/data_states.csv
         primaryKey: id
         tableName: states
+- changeSet:
+    id: 1555666271658-1
+    author: Ying-Li
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            name: company_id
+            type: BIGINT
+        tableName: employment_types
