--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1817,3 +1817,35 @@ databaseChangeLog:
         file: db/changelog/data/permission-types-user-roles.csv
         primaryKey: id
         tableName: permission_types_user_roles
+- changeSet:
+    id: 1556000826781-1
+    author: wenhao-eb
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/marital-status.csv
+        primaryKey: id
+        tableName: marital_status
+- changeSet:
+      id: 1556008104087-2
+      author: wenhao-eb
+      changes:
+        - dropColumn:
+            columnName: city_id
+            tableName: user_addresses
+- changeSet:
+      id: 1556008164280-3
+      author: wenhao-eb
+      changes:
+      - addColumn:
+          columns:
+          - column:
+              name: city
+              type: varchar(255)
+          tableName: user_addresses
