--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1907,3 +1907,19 @@ databaseChangeLog:
         file: db/changelog/data/user-statuses.csv
         primaryKey: id
         tableName: user_statuses
+
+- changeSet:
+    id: 1556008104087-8
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/genders.csv
+        primaryKey: id
+        tableName: genders
