--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -1923,3 +1923,38 @@ databaseChangeLog:
         file: db/changelog/data/genders.csv
         primaryKey: id
         tableName: genders
+
+- changeSet:
+    id: 1556008104087-9
+    author: Qi-Jia
+    changes:
+    - insert:
+        columns:
+        - column:
+            name: id
+            type: BIGINT
+            value: 1
+        - column:
+            name: name
+            type: VARCHAR(255)
+            value: USA
+        tableName: countries
+
+- changeSet:
+    id: 1556008104087-10
+    author: Qi-Jia
+    changes:
+    - loadUpdateData:
+        columns:
+        - column:
+            name: id
+            type: NUMERIC
+        - column:
+            name: country_id
+            type: NUMERIC
+        - column:
+            name: name
+            type: STRING
+        file: db/changelog/data/states-provinces.csv
+        primaryKey: id
+        tableName: states_provinces
