jira/SH-50 Employees list page (#41)
* jira/SH-50 modify spring security rule

* jira/SH-50 Employees list page

* jira/SH-50 format code

* jira/SH-50 employee list

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -13,6 +13,11 @@ spring:
     hikari:
       maximum-pool-size: 4
       minimum-idle: 2
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   thymeleaf:
     cache: false
 
