jira/SH-34 Send Welcome Email To New Employee (#45)
jira/SH-34 Send Welcome Email To New Employee (#45)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     hibernate:
       ddl-auto: none
     generate-ddl: false
+    properties:
+      hibernate:
+        globally_quoted_identifiers: true
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yml
