jira/SH-34 new employee improvement (#62)
* jira/SH-34 refactor schedule email feature

* jira/SH-34 merge master

* jira/SH-50 change new employee logic

* jira/SH-34 connect pool size limit on localhost

* jira/SH-34 new employee improvement

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -6,6 +6,10 @@ logging:
     root: INFO
 
 spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 2
   jpa:
     show-sql: true
     properties:
