jira/SH-98 add retry feature to email sending (#79)
* add retry feature to email sending

* format code

* improve logic

* format code

* improve logoc

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yml
   thymeleaf:
     prefix: classpath:templates/
+
+email:
+  retryLimit: 5
