jira/SH-31 disable spring mvc path suffix matching (#80)
* jira/SH-31 sign in & sign up improvement

* jira/SH-31 sign in & sign up improvement

* sign in & sign up improvement

* sign in & sign up improvement

* remove unused configuration in application.yml

* format code

* change notification message

* change to use fastjson

* fix path suffix match

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -4,6 +4,9 @@ server:
 logging:
   level:
     root: INFO
+    org:
+      hibernate:
+        type: trace
 
 spring:
   datasource:
@@ -11,10 +14,10 @@ spring:
       maximum-pool-size: 4
       minimum-idle: 2
   jpa:
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
+        show-sql: true
   thymeleaf:
     cache: false
   profiles:
