Jira/sh 95 fix time json format error (#83)
* jira/SH-95: data json error fix

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     properties:
       hibernate:
         globally_quoted_identifiers: true
+        jdbc:
+          time_zone: UTC
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yml
