Jira/sh 89 policies dashboard and paid holidays (#95)
* Create paid holiday tables.

* Paid holiday build.

* Paid holiday build.

* Merge from master.

* Rename folder name.

* Code format.

* Code format.

* Code checkstyle.

* Code format.

* WebSecurityConfiguration

* Change the url.

* Code review.

* Code format.

* Code format.

* Code format.

* Create paid holiday tables.

* Paid holiday build.

* Paid holiday build.

* Merge from master.

* Rename folder name.

* Code format.

* Code format.

* Code checkstyle.

* Code format.

* Change the url.

* Code review.

* Create paid holiday tables.

* Paid holiday build.

* Paid holiday build.

* Merge from master.

* Rename folder name.

* Code format.

* Code format.

* Code format.

* Code format.

* Code checkstyle.

* Code format.

* Change the url.

* Code review.

* Code format.

* Code format.

* Merge branch 'master' of https://github.com/tardisone/shamu-hrs-web into jira/SH-89-policies-dashboard-and-paid-holidays

# Conflicts:
#	src/App/Account/Actions/index.js
#	src/App/Common/Emergency/Container/Emergency.scss
#	src/App/Common/Form/DatePicker.jsx
#	src/App/Common/Form/Select.jsx
#	src/App/Home/Reducers/index.js
#	src/App/TimeOff/Actions/index.js
#	src/App/TimeOff/Components/NewPolicyButton.jsx
#	src/App/TimeOff/Components/NewPolicyButton.scss
#	src/App/TimeOff/Components/Policies.jsx
#	src/App/TimeOff/Components/PolicyList.scss
#	src/App/TimeOff/Constants.js
#	src/App/TimeOff/Containers/MyTimeOff.jsx
#	src/App/TimeOff/Containers/Reports.jsx
#	src/App/TimeOff/Containers/Requests.jsx
#	src/App/TimeOff/Reducers/index.js
#	src/App/TimeOff/index.jsx

* HashIdFormat.

* Format paid holiday date.

* Fix: Update paid holiday select.

* Change paid holiday data type to timestamp.

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -881,3 +881,11 @@ databaseChangeLog:
         primaryKey: id
         tableName: compensation_frequency
 
+- changeSet:
+    id: 1558323491275-1
+    author: rex-eb
+    changes:
+    - modifyDataType:
+        columnName: holiday_date
+        newDataType: Timestamp
+        tableName: paid_holidays
