Jira/sh 92  add aws secret manager (#75)
* jira/SH-92: add aws secret manager

* jira/SH-92: optimize code

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,16 @@ spring:
   thymeleaf:
     prefix: classpath:templates/
 
+cloud:
+  aws:
+    stack:
+      auto: false
+
+aws:
+  secretsmanager:
+    prefix: /secret
+    enabled: true
+    fail-fast: false
+
 email:
   retryLimit: 5
