--- a/config/application-env.yml
+++ b/config/application-env.yml
@@ -2,10 +2,6 @@ server:
   port: 9000
 
 spring:
-  datasource:
-    url: jdbc:mysql://shamu-hrs-qa.cenqdgeoqsjh.ap-northeast-1.rds.amazonaws.com/shamu_hrs_qa?zeroDateTimeBehavior=convertToNull
-    username: shamu_hrs_qa
-    password: shamu_hrs_qa
   thymeleaf:
     cache: false
 
@@ -14,16 +10,10 @@ application:
   frontEndAddress: https://hrs.interviewed-qa.com/
 
 aws:
-  awsAccessKeyId: AKIAXYMULKOL2JOY2GOP
-  awsSecretAccessKey: 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
   bucketName: shamu-hrs-qa
   folder: media
-  region: ap-northeast-1
 
-auth0:
-  jwks: https://shamu-hrs-qa.auth0.com/.well-known/jwks.json
-  algorithm: RS256
-  authDomain: https://shamu-hrs-qa.auth0.com/
-
-sendGrid:
-  apiKey: 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
+cloud:
+  aws:
+    region:
+      auto: true
