--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -27,15 +27,15 @@ application:
   systemEmailAddress: noreply@interviewed.com
   frontEndAddress: http://localhost:3000/
 
+cloud:
+  aws:
+    region:
+      static: ap-northeast-1
+      auto: false
+
 aws:
-  awsAccessKeyId: AKIAXYMULKOL2JOY2GOP
-  awsSecretAccessKey: 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
   bucketName: shamu-hrs-qa
   folder: media-local
-  region: ap-northeast-1
 
 auth0:
   algorithm: RS256
-
-sendGrid:
-  apiKey: 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
