--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - .:/app
       - ~/.m2:/root/.m2
+      - ~/.aws:/root/.aws
     ports:
       - 8081:8081
     command:
